src-tauri/error_log_3.txt
    Checking vplayer v0.9.17 (C:\Users\Zhitn\Desktop\Vplayer\src-tauri)
warning: unused import: `error`
 --> src\audio\device.rs:9:23
  |
9 | use log::{info, warn, error};
  |                       ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
  --> src\audio\device.rs:10:5
   |
10 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `try_default` found for struct `OutputStream` in the current scope
   --> src\audio\device.rs:107:40
    |
107 |             let stream = OutputStream::try_default()
    |                                        ^^^^^^^^^^^ function or associated item not found in `OutputStream`

error[E0599]: no function or associated item named `try_new` found for struct `rodio::Sink` in the current scope
  --> src\audio\mod.rs:74:26
   |
74 |         let sink = Sink::try_new(&mixer).or_else(|_| {
   |                          ^^^^^^^ function or associated item not found in `rodio::Sink`
   |
note: if you're trying to build a new `rodio::Sink`, consider using `rodio::Sink::connect_new` which returns `rodio::Sink`
  --> C:\Users\Zhitn\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rodio-0.21.1\src\sink.rs:72:5
   |
72 |     pub fn connect_new(mixer: &Mixer) -> Sink {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DeviceTrait`
 --> src\audio\device.rs:7:38
  |
7 | use rodio::cpal::traits::{HostTrait, DeviceTrait as CpalDeviceTrait};
  |                                      ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `vplayer` (bin "vplayer") generated 3 warnings
error: could not compile `vplayer` (bin "vplayer") due to 2 previous errors; 3 warnings emitted
